--- a/blog.css
+++ b/blog.css
@@ -3,12 +3,32 @@ body{
 }
 .maindiv{
     display: flex;
+    width: 90vw;
+    height: auto;
+    margin: auto;
     /* width: fit-content; */
     /* background-color: aqua; */
 }
-.firstimg>img{
+.maindiv .right-side{
+    width: min-content;
+    
+}
+.right-side .firstimg{
  height: 40vh;
  width: 50vw;
+}
+.maindiv .left-side{
+    margin-left: 1rem;
+    font-size: .7rem;
+    height: 60vh;
+}
+.left-column{
+    height: 6rem;
+    width: fit-content;
+}
+.left-column .leftimg{
+    height: 80px;
+    width: 150px;
 }
 
 /* trending stories */
@@ -57,6 +77,7 @@ body{
 /* video section */
 .videos{
     margin-top: 5rem;
+    flex-wrap: nowrap;
 }
 .videoCard{
     height: 15rem !important;
