--- a/blog.css
+++ b/blog.css
@@ -1,6 +1,6 @@
-body{
+/* body{
     overflow-x: hidden;
-}
+} */
 .maindiv{
     display: flex;
     width: 90vw;
@@ -8,27 +8,31 @@ body{
     margin: auto;
     /* width: fit-content; */
     /* background-color: aqua; */
+    margin-bottom: 1rem;
 }
 .maindiv .right-side{
     width: min-content;
     
 }
 .right-side .firstimg{
- height: 40vh;
+ height: 50vh;
  width: 50vw;
+ margin-bottom: 1rem;
 }
 .maindiv .left-side{
     margin-left: 1rem;
-    font-size: .7rem;
+    font-size: 1rem;
     height: 60vh;
+    cursor: pointer;
 }
 .left-column{
-    height: 6rem;
+    height: 7rem;
     width: fit-content;
 }
 .left-column .leftimg{
     height: 80px;
     width: 150px;
+    margin-top: 7px;
 }
 
 /* trending stories */
@@ -70,6 +74,8 @@ body{
 .card{
     width: 25rem !important;
     height: 20rem !important;
+    border: 1px solid #0AAAA0 !important;
+    cursor: pointer;
 }
 .card-img-top{
     height: 12rem !important;
@@ -86,7 +92,7 @@ body{
 
 /* quote css */
 .quoteCard{
-    height: 12rem !important;
+    height: 13rem !important;
 }
 
 
@@ -102,6 +108,13 @@ body{
     padding: 7px 7px;
     margin: 7px 7px;
 }
+.left-column{
+    height: 9rem;
+    width: fit-content;
+    font-size: small;
+    text-emphasis:inherit;
+}
+
 
 }
 
@@ -115,13 +128,17 @@ body{
     .trending-cards{
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
     .container-stories{
-        margin-right: 4rem;
+        margin-right: 1rem;
         width: auto;
     }
     .card{
-        margin: auto;
         margin-bottom: 1rem;
+        width: 20rem !important;
+        height: 17rem !important;
+        padding: 7px 7px;
+        margin: 7px 7px;
     }
 }
